# lambda-at-home

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG-v0.2.0.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.lambda  INSTALL.md  Makefile  README-bare-service.md  README.md  TESTING.md  config.toml  docker-compose.override.yml  docker-compose.sidecar.yml  docker-compose.test.yml  docker-compose.yml  docker-config.toml  install-lambda-at-home.sh  install.sh  k8s-lambda-deployment.yaml  release-please-config.json  run-bare-service.sh  rust-toolchain.toml  setup.sh  test-complete-lambda-flow.sh  test-complete-suite.sh  test-concurrency-lifecycle.sh  test-lambda-comprehensive.sh  test-lambda-deployment.sh  test-lambda-execution.sh  test-lambda-metrics.sh  test-sidecar.sh  test-simple-flow.sh  test-simple.sh  test-user-api.sh  test-websocket.js  (+2 more)
.cursor/rules/: 00-architecture.mdc  01-repo-strcture.mdc  02-apis-user.mdc  03-apis-runtime.mdc  04-invoker-docker.mdc  05-packaging-build.mdc  06-config.mdc  07-errors.mdc  08-metrics.mdc  09-rust-style.mdc  10-tests.mdc  11-templates.mdc  12-security.mdc  13-idle-and-concurrency.mdc
.github/workflows/: ci.yml  release-please.yml  release.yml
config/: config.toml
configs/: default.toml
console/: README.md  index.html  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  middleware.rs  routes.rs  state.rs
crates/api/tests/: simple.rs
crates/invoker/: Cargo.toml
crates/invoker/src/: docker.rs  lib.rs
crates/invoker/tests/: fs_policy.rs  lib.rs  lifecycle.rs  network.rs  security_env.rs
crates/metrics/: Cargo.toml
crates/packaging/: Cargo.toml
crates/runtime_api/: Cargo.toml
crates/testsupport/: Cargo.toml
docs/: README.md  WEBSOCKET_RUNTIME.md
e2e/: MIGRATION_TO_NODE24.md  README.md  package-lock.json  package.json  performance-results.json  test-function.js  test-node24.js
e2e/tests/: setup.js
e2e/utils/: cleanup.js
examples/api-caller-node/: README.md  index.js  package.json
examples/api-caller-python/: README.md  lambda_function.py  requirements.txt  test-examples.json
examples/cpu-burner/: index.js  package.json
examples/echo-node/: index.js  package.json
examples/echo-python/: lambda_function.py  requirements.txt
examples/websocket-test-function/: README.md  index.js  package-lock.json  package.json
examples/websocket-test-function-python/: README.md  lambda_function.py
functions/c32ee421-8b23-487a-a06f-6f23d80249fa/: metadata.json
runtimes/nodejs/: .dockerignore  Dockerfile  (+1 more)
runtimes/nodejs-ric/: Dockerfile  package.json
scripts/: README.md  run-service.sh  test-apigw-proxy.sh  test-autoscaling.sh  test-node-runtimes.sh  test-service.sh
service/: CHANGELOG.md  Cargo.toml  Cross.toml
service/configs/: default.toml
service/crates/api/: Cargo.toml
service/crates/api/src/: handlers.rs  lib.rs  openapi.rs  routes.rs  state.rs
service/crates/api/tests/: simple.rs
service/crates/cli/: Cargo.toml
service/crates/cli/src/: main.rs
service/crates/control/: Cargo.toml
service/crates/control/migrations/: 001_initial.sql  002_api_routes.sql  003_secrets.sql  004_function_concurrency.sql
service/crates/control/src/: autoscaler.rs  cache.rs  concurrency.rs  container_monitor.rs  execution_tracker.rs  idle_watchdog.rs  lib.rs  migrations.rs  pending.rs  queues.rs  registry.rs  warm_pool.rs  work_item.rs
service/crates/control/tests/: autoscaler_tests.rs  common.rs  concurrency.rs  container_monitor_tests.rs  fnkey.rs  lib.rs  pending.rs  queues.rs  registry_tests.rs  scheduler.rs  secrets.rs  warm_pool.rs
service/crates/invoker/: Cargo.toml
service/crates/invoker/src/: container.rs  docker.rs  lib.rs  security.rs
service/crates/invoker/tests/: docker_tests.rs  fs_policy.rs  lifecycle.rs  network.rs  security_env.rs
service/crates/metrics/: Cargo.toml
service/crates/metrics/src/: lib.rs  prometheus.rs  service.rs  tracing.rs
service/crates/metrics/tests/: metrics_tests.rs
service/crates/models/: Cargo.toml
service/crates/models/src/: config.rs  docker.rs  error.rs  function.rs  invoke.rs  lib.rs  routes.rs  secrets.rs
service/crates/models/tests/: serde_tests.rs
service/crates/packaging/: Cargo.toml
service/crates/packaging/src/: cache.rs  image_builder.rs  lib.rs  service.rs  zip_handler.rs
service/crates/packaging/src/runtimes/: mod.rs  node.rs  python.rs  rust_rt.rs
service/crates/packaging/tests/: integration_tests.rs
service/crates/runtime_api/: Cargo.toml
service/crates/runtime_api/src/: handlers.rs  lib.rs  routes.rs  state.rs  websocket.rs
service/crates/runtime_api/tests/: runtime_api.rs  websocket_fallback_test.rs  websocket_integration_test.rs  websocket_runtime_test.rs  websocket_test.rs
service/crates/testsupport/: Cargo.toml
service/crates/testsupport/src/: daemon.rs  helpers.rs  http_client.rs  lib.rs  metrics.rs
service/crates/testsupport/tests/: metrics_tests.rs
service/data/: .gitignore
service/runtimes/nodejs18/: bootstrap-websocket.js  bootstrap.js
service/runtimes/nodejs22/: bootstrap-websocket.js  bootstrap.js
service/runtimes/python311/: bootstrap-websocket.py  bootstrap.py
src/: cli.rs  config.rs  container_lifecycle.rs  lambda_executor.rs  lambda_runtime_api.rs  lib.rs  ric_docker.rs  storage.rs
test-function/: index.js  package.json
tests/: it_01_smoke.rs  it_02_invoke.rs  it_03_idle_pool.rs  it_04_errors.rs  it_05_concurrency.rs  lambda_concurrency_test.rs  lambda_container_lifecycle_test.rs  lambda_debug_test.rs  lambda_full_flow_test.rs  lambda_full_integration_test.rs  lambda_host_network_test.rs  lambda_integration_test.rs  lambda_metrics_test.rs  lambda_official_runtime_test.rs  lambda_real_world_test.rs  lambda_runtime_api_test.rs  lambda_runtime_service_test.rs  lambda_sidecar_execution_test.rs  lambda_sidecar_integration_test.rs  lambda_sidecar_simple_test.rs  lambda_simple_test.rs  lambda_socat_relay_test.rs  lambda_stress_test.rs  lambda_working_test.rs
(+229 files in other folders)
