[package]
name = "lambda-invoker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Docker invoker for Lambda@Home"

[dependencies]
# Docker integration
bollard = { workspace = true }

# Shared models
lambda-models = { path = "../models" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async utilities
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
time = { workspace = true }
chrono = { workspace = true }

# Encoding
base64 = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
