[package]
name = "lambda-cli"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tools for Lambda@Home"

[[bin]]
name = "lambda-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Shared models
lambda-models = { path = "../models" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async utilities
tokio = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Encoding
base64 = { workspace = true }
