[package]
name = "lambda-control"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Control plane for Lambda@Home"

[dependencies]
# Database
sqlx = { workspace = true }

# Shared models
lambda-models = { path = "../models" }
lambda-invoker = { path = "../invoker" }
lambda-packaging = { path = "../packaging" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async utilities
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
time = { workspace = true }
chrono = { workspace = true }

# Random
rand = { workspace = true }

# Base64 encoding/decoding
base64 = { workspace = true }

# Lock-free concurrent data structures
dashmap = "5.5"

# Hashing
md5 = "0.7"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1"
futures = "0.3"
lambda-testsupport = { path = "../testsupport" }
