[package]
name = "lambda-metrics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Metrics and tracing for Lambda@Home"

[dependencies]
# Logging and metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "time"] }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }

# Shared models
lambda-models = { path = "../models" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async utilities
tokio = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
time = { workspace = true }
chrono = { workspace = true }
