[package]
name = "lambda-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared data models for Lambda@Home"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
