[package]
name = "lambda-testsupport"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Test support utilities for Lambda@Home"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Encoding
base64 = { workspace = true }

# File operations
zip = { workspace = true }
tempfile = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Async utilities
futures = { workspace = true }

# Docker (optional for integration tests)
bollard = { workspace = true, optional = true }

# Models
lambda-models = { path = "../models" }

# Configuration
toml = { workspace = true }

[features]
default = []
docker_tests = ["bollard"]
